welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: '=' expected but identifier found.
def finDiag:=Boolean= {
           ^Diagonal:27: error: illegal start of simple expression
var pas:Int=0
^